// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`run card renderer snapshots > keeps recent tool details readable and folds completed calls 1`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 处理中**  ·  3 次工具调用",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "**输出**
\`\`\`text
/repo
\`\`\`",
            "tag": "markdown",
          },
        ],
        "expanded": false,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "✅ **Bash** — pwd",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "**File** \`/repo/a.ts\`

**Output**
\`\`\`
a
\`\`\`",
            "tag": "markdown",
          },
        ],
        "expanded": false,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "✅ **Read** — /repo/a.ts",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "**File** \`/repo/a.ts\`

_运行中…_",
            "tag": "markdown",
          },
        ],
        "expanded": true,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "⏳ **Edit** — /repo/a.ts",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
      {
        "behaviors": [
          {
            "type": "callback",
            "value": {
              "cmd": "stop",
            },
          },
        ],
        "tag": "button",
        "text": {
          "content": "停止生成",
          "tag": "plain_text",
        },
        "type": "default",
      },
    ],
  },
  "config": {
    "streaming_mode": true,
    "summary": {
      "content": "正在调用工具",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > keeps recent tool details readable and folds completed calls 2`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 已完成**  ·  3 次工具调用",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "**输出**
\`\`\`text
/repo
\`\`\`",
            "tag": "markdown",
          },
        ],
        "expanded": false,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "✅ **Bash** — pwd",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "**File** \`/repo/a.ts\`

**Output**
\`\`\`
a
\`\`\`",
            "tag": "markdown",
          },
        ],
        "expanded": false,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "✅ **Read** — /repo/a.ts",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "**File** \`/repo/a.ts\`

**Output**
\`\`\`
ok
\`\`\`",
            "tag": "markdown",
          },
        ],
        "expanded": false,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "✅ **Edit** — /repo/a.ts",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
    ],
  },
  "config": {
    "streaming_mode": false,
    "summary": {
      "content": "已完成",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders active and completed thinking 1`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 处理中**",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "checking options",
            "tag": "markdown",
          },
        ],
        "expanded": true,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "🧠 **思考中**",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
      {
        "behaviors": [
          {
            "type": "callback",
            "value": {
              "cmd": "stop",
            },
          },
        ],
        "tag": "button",
        "text": {
          "content": "停止生成",
          "tag": "plain_text",
        },
        "type": "default",
      },
    ],
  },
  "config": {
    "streaming_mode": true,
    "summary": {
      "content": "思考中",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders active and completed thinking 2`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 已完成**",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "checking options",
            "tag": "markdown",
          },
        ],
        "expanded": false,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "🧠 **思考完成，点击查看**",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
      {
        "content": "final answer",
        "tag": "markdown",
      },
    ],
  },
  "config": {
    "streaming_mode": false,
    "summary": {
      "content": "已完成",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders done, error, interrupted, and idle-timeout terminal states 1`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 已完成**",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
    ],
  },
  "config": {
    "streaming_mode": false,
    "summary": {
      "content": "已完成",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders done, error, interrupted, and idle-timeout terminal states 2`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 已结束**",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "content": "⚠️ agent 失败：process failed",
        "tag": "markdown",
      },
    ],
  },
  "config": {
    "streaming_mode": false,
    "summary": {
      "content": "出错",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders done, error, interrupted, and idle-timeout terminal states 3`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 已结束**",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "content": "partial",
        "tag": "markdown",
      },
      {
        "content": "_⏹ 已被中断_",
        "tag": "markdown",
      },
    ],
  },
  "config": {
    "streaming_mode": false,
    "summary": {
      "content": "已中断",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders done, error, interrupted, and idle-timeout terminal states 4`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 已结束**",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "content": "partial",
        "tag": "markdown",
      },
      {
        "content": "_⏱ 15 分钟无响应,已自动终止_",
        "tag": "markdown",
      },
    ],
  },
  "config": {
    "streaming_mode": false,
    "summary": {
      "content": "已超时",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders initial running state 1`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 处理中**",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "behaviors": [
          {
            "type": "callback",
            "value": {
              "cmd": "stop",
            },
          },
        ],
        "tag": "button",
        "text": {
          "content": "停止生成",
          "tag": "plain_text",
        },
        "type": "default",
      },
    ],
  },
  "config": {
    "streaming_mode": true,
    "summary": {
      "content": "思考中",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders markdown text mode without card-only controls 1`] = `
"Answer

> ✅ **Bash** — pwd

Done

_✍️ 正在输出…_"
`;

exports[`run card renderer snapshots > renders markdown text mode without card-only controls 2`] = `
"Answer

> ✅ **Bash** — pwd

Done

_⏹ 已被中断_"
`;

exports[`run card renderer snapshots > renders markdown text mode without card-only controls 3`] = `
"Answer

> ✅ **Bash** — pwd

Done

_⏱ 10 分钟无响应,已自动终止_"
`;

exports[`run card renderer snapshots > renders markdown text mode without card-only controls 4`] = `"⚠️ agent 失败:process failed"`;

exports[`run card renderer snapshots > renders tool running, done, and error states 1`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 处理中**  ·  1 次工具调用",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "_运行中…_",
            "tag": "markdown",
          },
        ],
        "expanded": true,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "⏳ **Bash** — pwd",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
      {
        "behaviors": [
          {
            "type": "callback",
            "value": {
              "cmd": "stop",
            },
          },
        ],
        "tag": "button",
        "text": {
          "content": "停止生成",
          "tag": "plain_text",
        },
        "type": "default",
      },
    ],
  },
  "config": {
    "streaming_mode": true,
    "summary": {
      "content": "正在调用工具",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders tool running, done, and error states 2`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 已完成**  ·  1 次工具调用",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "border": {
          "color": "grey",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "**输出**
\`\`\`text
/repo
\`\`\`",
            "tag": "markdown",
          },
        ],
        "expanded": false,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "✅ **Bash** — pwd",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
    ],
  },
  "config": {
    "streaming_mode": false,
    "summary": {
      "content": "已完成",
    },
  },
  "schema": "2.0",
}
`;

exports[`run card renderer snapshots > renders tool running, done, and error states 3`] = `
{
  "body": {
    "elements": [
      {
        "content": "**任务 · 已完成**  ·  1 次工具调用",
        "tag": "markdown",
      },
      {
        "tag": "hr",
      },
      {
        "border": {
          "color": "red",
          "corner_radius": "5px",
        },
        "elements": [
          {
            "content": "**File** \`/missing.ts\`

**Error**
\`\`\`
ENOENT
\`\`\`",
            "tag": "markdown",
          },
        ],
        "expanded": true,
        "header": {
          "icon": {
            "size": "16px 16px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "follow_text",
          "title": {
            "content": "❌ **Read** — /missing.ts",
            "tag": "markdown",
          },
          "vertical_align": "center",
        },
        "padding": "8px 8px 8px 8px",
        "tag": "collapsible_panel",
        "vertical_spacing": "8px",
      },
    ],
  },
  "config": {
    "streaming_mode": false,
    "summary": {
      "content": "已完成",
    },
  },
  "schema": "2.0",
}
`;
